<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dip"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_feedback" >
    
    <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="1">
       
       <ImageButton 
          android:id="@+id/weather_btn_back"
          android:layout_width="32dp"
          android:layout_height="30dp"
          android:layout_centerVertical="true"
          android:layout_marginLeft="@dimen/pic_margin"
          android:background="@drawable/navigation_btn"/>
       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:text="@string/weather"/>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/weather_area"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/sunny" 
            android:layout_toLeftOf="@+id/weather_icon_loc"
            android:layout_alignTop="@+id/weather_temperature"/>

        <ImageView
            android:id="@+id/weather_icon_loc"
            android:layout_width="14dp"
            android:layout_height="18dp"
            android:layout_centerInParent="true"
            android:background="@drawable/icon_loc" />

        <TextView
            android:id="@+id/weather_text_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/txt_pic"
            android:layout_toRightOf="@+id/weather_icon_loc"
            android:text="@string/default_loc_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/weather_icon_loc"
            android:layout_alignLeft="@+id/weather_icon_loc"
            android:layout_marginBottom="5dp"
            android:text="@string/default_temp"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/weather_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/default_weather"
            android:layout_toRightOf="@+id/weather_temperature"
            android:layout_above="@+id/weather_icon_loc"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="10dp"/>
        <TextView 
            android:id="@+id/weather_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/default_time"
            android:layout_below="@+id/weather_icon_loc"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/weather_icon_loc"/>
        <RelativeLayout 
            android:id="@+id/weather_stat_area"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:background="@drawable/bg_weather_gray"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/weather_time"
            android:layout_marginTop="10dp">
            <ImageView 
              android:id="@+id/weather_ultra"
              android:layout_width="15dp"
              android:layout_height="15dp"
              android:layout_centerVertical="true"
              android:layout_marginLeft="@dimen/txt_pic"
              android:background="@drawable/ultravioletray"/>
            <TextView 
              android:id="@+id/weather_ultra_txt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="12sp"
              android:text="@string/default_ultra"
              android:textColor="@color/white"
              android:layout_centerVertical="true"
              android:layout_toRightOf="@+id/weather_ultra"
              android:layout_marginLeft="@dimen/pic_margin"/>
            <ImageView 
              android:id="@+id/weather_humidity"
              android:layout_width="15dp"
              android:layout_height="15dp"
              android:layout_toRightOf="@+id/weather_ultra_txt"
              android:layout_marginLeft="@dimen/txt_pic"
              android:background="@drawable/humidity"
              android:layout_centerVertical="true"/>
             <TextView 
              android:id="@+id/weather_humidity_txt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="12sp"
              android:text="@string/default_humidity"
              android:textColor="@color/white"
              android:layout_centerVertical="true"
              android:layout_toRightOf="@+id/weather_humidity"
              android:layout_marginLeft="@dimen/pic_margin"/>
             <ImageView 
              android:id="@+id/weather_wind"
              android:layout_width="15dp"
              android:layout_height="15dp"
              android:layout_toRightOf="@+id/weather_humidity_txt"
              android:layout_marginLeft="@dimen/txt_pic"
              android:background="@drawable/wind"
              android:layout_centerVertical="true"/>
             <TextView 
              android:id="@+id/weather_wind_txt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/default_wind"
              android:textSize="12sp"
              android:textColor="@color/white"
              android:layout_centerVertical="true"
              android:layout_toRightOf="@+id/weather_wind"
              android:layout_marginLeft="@dimen/pic_margin"/>
             <ImageView 
              android:id="@+id/weather_pm"
              android:layout_width="15dp"
              android:layout_height="15dp"
              android:layout_toRightOf="@+id/weather_wind_txt"
              android:layout_marginLeft="@dimen/txt_pic"
              android:background="@drawable/pm"
              android:layout_centerVertical="true"/>
             <TextView 
              android:id="@+id/weather_pm_txt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/default_pm"
              android:textSize="12sp"
              android:textColor="@color/white"
              android:layout_centerVertical="true"
              android:layout_toRightOf="@+id/weather_pm"
              android:layout_marginLeft="@dimen/pic_margin"/>
            
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pm_area"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >
        
        <ImageView 
          android:id="@+id/weather_figure"
          android:layout_width="70dp"
          android:layout_height="120dp"
          android:background="@drawable/share_female_1"
          android:layout_marginLeft="30dp"
          android:layout_centerVertical="true"/>
        <RelativeLayout 
           android:layout_width="200dp"
           android:layout_height="60dp"
           android:background="@drawable/speech_bubble"
           android:layout_centerVertical="true"
           android:layout_marginBottom="30dp"
           android:layout_marginLeft="90dp">
         <TextView 
          android:id="@+id/weather_guide"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:text="不适宜，运动时要多家防范哦！"
          android:textSize="12sp"
          android:layout_centerInParent="true"
          android:textColor="@color/gray"/>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
