<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
   <LinearLayout 
       android:orientation="vertical" 
       android:layout_width="fill_parent" 
       android:layout_height="fill_parent">
    
    <RelativeLayout 
        android:id="@+id/home_top_area"
        android:layout_width="fill_parent"
        android:layout_weight="5"
        android:layout_height="0dp"
        android:background="@drawable/bg_feedback">
         <ImageButton 
          android:id="@+id/btn_home_menu"
          android:layout_width="40dp"
          android:layout_height="45dp"
          android:background="@drawable/btn_home_menu"
          android:layout_alignParentLeft="true"/>
        
          <ImageView 
              android:id="@+id/icon_home_weather"
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:layout_alignParentRight="true"
              android:layout_marginRight="@dimen/pic_margin"
              android:layout_alignBottom="@+id/btn_home_menu"
              android:background="@drawable/unknown"
              android:layout_marginBottom="10dp"/>
           <TextView 
              android:id="@+id/text_home_pm"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/icon_home_weather"
              android:textSize="12sp"
              android:textColor="@color/white"
              android:layout_marginRight="@dimen/txt_pic"
              android:layout_toLeftOf="@+id/icon_home_weather"/>
           <TextView 
              android:id="@+id/text_home_temperature"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="12sp"
              android:textColor="@color/white"
              android:layout_marginRight="@dimen/txt_pic"
              android:layout_toLeftOf="@+id/icon_home_weather"
              android:layout_above="@+id/text_home_pm"/>
           <TextView 
              android:id="@+id/text_home_number"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/duration_init"
              android:textSize="45sp"
              android:textColor="@color/white"
              android:textStyle="bold"
              android:layout_centerInParent="true"/>
           <TextView
              android:id="@+id/text_home_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/duration"
              android:textColor="@color/home_shallowblue"
              android:textSize="14sp"
              android:layout_alignBottom="@+id/text_home_number"
              android:layout_toRightOf="@+id/text_home_number"
              android:layout_marginBottom="@dimen/pic_margin"/>
           <LinearLayout
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_below="@+id/text_home_text"
              android:layout_centerHorizontal="true"
              android:orientation="horizontal"
              android:layout_marginTop="@dimen/txt_pic">
             <TextView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:textColor="@color/white"
              android:text="@string/gps"/> 
             <ImageView 
              android:id="@+id/gps_magnitude"
              android:layout_width="22dp"
              android:layout_height="20dp"
              android:layout_marginLeft="@dimen/txt_pic"
              android:background="@drawable/running_gps_01"/>
           </LinearLayout>
      
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
              <TextView
                 android:id="@+id/text_home_cal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/pic_margin"
                 android:textColor="@color/bg_blue"
                 android:text="@string/cal"/>
               <TextView
                 android:id="@+id/num_home_cal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/home_darkblue"
                 android:layout_below="@+id/text_home_cal"
                 android:layout_marginTop="@dimen/pic_margin"
                 android:text="@string/cal_init"/>
               <TextView
                 android:id="@+id/text_home_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:layout_marginTop="@dimen/pic_margin"
                 android:layout_toLeftOf="@+id/text_home_cal"
                 android:layout_marginRight="@dimen/home_stat_margin"
                 android:textColor="@color/bg_blue"
                 android:text="@string/duration"/>
               <TextView
                 android:id="@+id/num_home_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/home_darkblue"
                 android:layout_below="@+id/text_home_duration"
                 android:layout_marginTop="@dimen/pic_margin"
                 android:layout_toLeftOf="@+id/num_home_cal"
                 android:layout_marginRight="55dp"
                 android:text="@string/duration_init_short"/>
                <TextView
                 android:id="@+id/text_home_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:layout_marginTop="@dimen/pic_margin"
                 android:layout_toRightOf="@+id/text_home_cal"
                 android:layout_marginLeft="@dimen/home_stat_margin"
                 android:textColor="@color/bg_blue"
                 android:text="@string/distance"/>
               <TextView
                 android:id="@+id/num_home_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/home_darkblue"
                 android:layout_below="@+id/text_home_duration"
                 android:layout_marginTop="@dimen/pic_margin"
                 android:layout_toRightOf="@+id/num_home_cal"
                 android:layout_marginLeft="75dp"
                 android:text="@string/distance_init"/>
             
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/home_map_area"
        android:layout_width="fill_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
         <ImageView 
           android:layout_width="fill_parent"
           android:layout_height="10dp"
           android:layout_alignParentTop="true"
           android:background="@drawable/img_shadow"/>
         <ImageButton 
           android:id="@+id/btn_home_locate"
           android:layout_width="46dp"
           android:layout_height="40dp"
           android:background="@drawable/btn_running_myposition"
           android:layout_alignParentLeft="true"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="40dp"/>
          <ImageButton 
           android:id="@+id/btn_home_customize"
           android:layout_width="46dp"
           android:layout_height="40dp"
           android:background="@drawable/btn_running_customize"
           android:layout_alignParentRight="true"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="40dp"/>
          <ImageButton 
           android:id="@+id/heatmap_btn"
           android:layout_width="46dp"
           android:layout_height="40dp"
           android:background="@drawable/btn_heatmap"
           android:layout_alignParentRight="true"
           android:layout_above="@+id/btn_home_customize"
           android:layout_marginBottom="5dp"/>
    </RelativeLayout>
   </LinearLayout>
   <LinearLayout
      android:id="@+id/running_pause_bar"
      android:layout_width="fill_parent"
      android:layout_height="35dp"
      android:orientation="horizontal"
      android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/pause_continue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/goon"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:clickable="true"
            android:visibility="gone"
            android:background="@drawable/running_btn_pause_continue"/>
          <TextView
            android:id="@+id/pause_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:clickable="true"
            android:visibility="gone"
            android:background="@drawable/running_btn_pause_stop"/>
   </LinearLayout>
 </RelativeLayout>